--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "displayName": "Promptbook `.book` Language",
+    "displayName": "Promptbook `.book` language support",
     "name": "book-extension",
     "version": "1.0.0",
     "publisher": "Promptbook",
