--- a/package.json
+++ b/package.json
@@ -70,7 +70,11 @@
                     ".ptbk",
                     ".ptbk.md"
                 ],
-                "configuration": "./language-configuration.json"
+                "configuration": "./language-configuration.json",
+                "icon": {
+                    "light": "./icon.png",
+                    "dark": "./icon.png"
+                }
             }
         ],
         "grammars": [
