Try to fix syntax highlight
> Syntax highlight is not working for .book files - they are just same-color text

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "displayName": ".book Language",
+    "displayName": "Promptbook .book language support",
     "name": "book-extension",
     "version": "1.0.0",
     "publisher": "Promptbook",
@@ -80,7 +80,7 @@
         "grammars": [
             {
                 "language": "book",
-                "scopeName": "source.book",
+                "scopeName": "text.book",
                 "path": "./syntaxes/book.tmLanguage.json"
             }
         ]
