Make github action to publish the plugin automatically on new version tag

--- a/package.json
+++ b/package.json
@@ -86,8 +86,11 @@
         ]
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "vsce package"
+        "test": "echo \"TODO: Implement test\" && exit 0",
+        "lint": "echo \"TODO: Implement lint\" && exit 0",
+        "build": "vsce package",
+        "preversion": "git pull && npm run lint && npm test && echo \"TODO: tsc\"",
+        "postversion": "git push && git push --tags"
     },
     "devDependencies": {
         "@types/glob": "^8.1.0",
