--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
         "mocha": "^11.1.0",
         "prettier": "^3.5.1",
         "typescript": "^5.7.3",
-        "vsce": "^2.15.0",
         "vscode": "^1.1.37"
+    },
+    "dependencies": {
+        "@vscode/vsce": "^3.2.2"
     }
 }
