Update publish command to use npx for VSCE

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,4 +25,4 @@ jobs:
       run: npm run build
 
     - name: Publish to VSCode Marketplace
-      run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+      run: npx vsce publish --pat ${{ secrets.VSCE_TOKEN }}
