Add support for `.bookc` files *(alongside existing `.book` support)*
- `.bookc` is compiled version of `.book`
- It is json in zip
- Show just a screen with this info in editor, do not try to edit is as text
- Use the icon from `.book` but make it red

--- a/package.json
+++ b/package.json
@@ -75,6 +75,20 @@
                     "light": "./icon.png",
                     "dark": "./icon.png"
                 }
+            },
+            {
+                "id": "bookc",
+                "aliases": [
+                    "BookC",
+                    "BOOKC"
+                ],
+                "extensions": [
+                    ".bookc"
+                ],
+                "icon": {
+                    "light": "./icon.png",
+                    "dark": "./icon.png"
+                }
             }
         ],
         "grammars": [
@@ -82,6 +96,18 @@
                 "language": "book",
                 "scopeName": "text.book",
                 "path": "./syntaxes/book.tmLanguage.json"
+            }
+        ],
+        "customEditors": [
+            {
+                "viewType": "bookc.preview",
+                "displayName": "BookC Preview",
+                "selector": [
+                    {
+                        "filenamePattern": "*.bookc"
+                    }
+                ],
+                "priority": "default"
             }
         ]
     },
