Working on `.bookc` preview

--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
         "vscode": "1.1.37"
     },
     "dependencies": {
-        "@vscode/vsce": "3.2.2"
+        "@vscode/vsce": "3.2.2",
+        "jszip": "3.10.1"
     },
     "funding": [
         {
