Add Book Color Theme and enhance syntax highlighting for Mermaid and book code blocks

--- a/package.json
+++ b/package.json
@@ -114,6 +114,13 @@
                 ],
                 "priority": "default"
             }
+        ],
+        "themes": [
+            {
+                "label": "Book Theme",
+                "uiTheme": "vs",
+                "path": "./themes/book-color-theme.json"
+            }
         ]
     },
     "scripts": {
