--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "book-extension",
     "version": "1.0.14",
     "publisher": "Promptbook",
-    "description": "!!!",
+    "description": "It's time for a paradigm shift. The future of software in plain English, French or Latin",
     "author": "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
     "contributors": [
         "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
