✍🏻 Description of the project into package.json
🔼 This commit was automatically generated by [Batch project editor](https://github.com/hejny/batch-project-editor) using workflow description

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "book-extension",
     "version": "1.0.17",
     "publisher": "Promptbook",
-    "description": "It's time for a paradigm shift. The future of software in plain English, French or Latin",
+    "description": "",
     "author": "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
     "contributors": [
         "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
