--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "engines": {
         "vscode": "^1.77.0"
     },
-    "license": "BUSL-1.1",
+    "license": "Apache-2.0",
     "icon": "./icons/book-icon.png",
     "galleryBanner": {
         "color": "#007ACC",
