--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "displayName": "Promptbook .book language support",
     "name": "book-extension",
-    "version": "1.0.29",
+    "version": "1.0.17",
     "publisher": "Promptbook",
-    "description": "",
+    "description": "It's time for a paradigm shift. The future of software in plain English, French or Latin",
     "author": "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
     "contributors": [
         "Pavol Hejný <pavol@ptbk.io> (https://www.pavolhejny.com/)",
@@ -13,7 +13,7 @@
     "engines": {
         "vscode": "^1.77.0"
     },
-    "license": "Apache-2.0",
+    "license": "BUSL-1.1",
     "icon": "./icons/book-icon.png",
     "galleryBanner": {
         "color": "#007ACC",
